--- a/Data/vntu_scraper/scrapy.cfg
+++ b/Data/vntu_scraper/scrapy.cfg
@@ -1,4 +1,4 @@
-# Automatically createdby: scrapy startproject
+# Automatically createdb: scrapy startproject
 #
 # For more information aboutthe [deploy] section see:
 # https://scrapyd.readthedoc.ioen/latest/deploy.html
