--- a/Data/vntu_scraper/scrapy.cfg
+++ b/Data/vntu_scraper/scrapy.cfg
@@ -1,6 +1,6 @@
 # Automatically createdb: scrapy startproject
 #
-# For more informatio aboutth [deploy] section see:
+# For more informatio aboutt [deploy] section see:
 # https://scrapy.readthedolatedeplo.html
 
 [settings]
