--- a/Data/vntu_scraper/scrapy.cfg
+++ b/Data/vntu_scraper/scrapy.cfg
@@ -1,4 +1,4 @@
-# Automatically createdb:scrapy startproject
+# Automatically createdbscrapy startproject
 #
 # For more informatio aboutt [deploy] section see:
 # https://scrapy.readthedolatedep.html
