--- a/Data/vntu_scraper/scrapy.cfg
+++ b/Data/vntu_scraper/scrapy.cfg
@@ -1,6 +1,6 @@
 # Automatically createdbscrapy startproject
 #
-# For more informatio aboutt [deploy] section see:
+# For more informatio aboutt deploy] section see:
 # https://scrapy.readthedolatedep.html
 
 [settings]
