--- a/Data/vntu_scraper/scrapy.cfg
+++ b/Data/vntu_scraper/scrapy.cfg
@@ -1,4 +1,4 @@
-# Automatically createdbscrapy startproject
+# Automatically createdbscrapystartproject
 #
 # For more informatio aboutt deploy] section see:
 # https://scrapy.readthedolatede.html
